--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,15 @@
   "rules": {
     "camelcase": "off",
     "no-useless-constructor": "off"
-  }
+  },
+  "comma-dangle": [
+    "error",
+    {
+      "arrays": "never",
+      "objects": "never",
+      "imports": "never",
+      "exports": "never",
+      "functions": "never"
+    }
+  ]
 }
