implementing JWT on fastify get token

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 NODE_ENV=dev
-PORT=3333
 
-# npm i dotenv => carrega o arquivo .env e transforma em variáveis ambientes dentro do node (import 'dotenv/config')(process.env.NODE_ENV)
+# Auth
+JWT_SECRET=ignitenode03
+
+
+# Database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+
+
