--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vitest/coverage-c8": "0.30.1",
     "@vitest/ui": "0.30.1",
     "eslint": "8.38.0",
+    "npm-run-all": "4.1.5",
     "prisma": "4.12.0",
     "tsup": "6.7.0",
     "tsx": "3.12.6",
